--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -8,7 +8,7 @@
     "outDir": "dist",
     "lib": ["es2020"],
     "target": "es2020",
-    "module": "esnext",
+    "module": "es2020",
     "moduleResolution": "Node",
     "esModuleInterop": true,
     "types": ["jest", "node"],
