--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -10,9 +10,8 @@
     "start": "cross-env NODE_ENV=production node ./dist/index.js",
     "update-schema": "tsx ./src/utils/updateSchema.ts",
     "test": "cross-env NODE_ENV=test jest",
-    "seed:dev": "cross-env NODE_ENV=development tsx ./src/seed/index.ts",
-    "seed:test": "cross-env NODE_ENV=test tsx ./src/seed/index.ts",
-    "seed:prod": "cross-env NODE_ENV=production tsx ./src/seed/index.ts"
+    "db:seed:dev": "cross-env NODE_ENV=development tsx ./src/seed/index.ts",
+    "db:clear": "cross-env NODE_ENV=development tsx ./src/seed/clearDb.ts"
   },
   "keywords": [],
   "author": "",
