--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -1,2 +1,3 @@
-EXPRESS_PORT=
-MONGO_URI=
+EXPRESS_PORT= # The port where the server will run.
+MONGO_URI= # The URI of the MongoDB database.
+RESEED_DB= # If true, the database will be reseeded with the initial data on every re-run on the 'development' environment. 
