--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,12 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "pipeline": {
+    "schema:copy": {},
     "build": {
+      "dependsOn": ["^build"],
+      "outputs": ["dist/**"]
+    },
+    "start": {
       "dependsOn": ["^build"],
       "outputs": ["dist/**"]
     },
