update packages and readme

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -6,9 +6,9 @@
     "type-check": "tsc --noEmit",
     "lint": "eslint --ext .ts ./src",
     "dev": "cross-env NODE_ENV=development tsx --watch --trace-deprecation  ./src/index.ts",
-    "build": "babel --extensions .ts src --out-dir dist --copy-files",
+    "build": "npm run schema:update && npm run schema:copy && babel --extensions .ts src --out-dir dist --copy-files",
     "start": "cross-env NODE_ENV=production node ./dist/index.js",
-    "update-schema": "tsx ./src/utils/updateSchema.ts",
+    "schema:update": "tsx ./src/graphql/schema/updateSchema.ts",
     "test": "cross-env NODE_ENV=test jest",
     "db:seed:dev": "cross-env NODE_ENV=development tsx ./src/seed/index.ts",
     "db:clear": "cross-env NODE_ENV=development tsx ./src/seed/clearDb.ts",
