--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "concurrently \"npm run relay:watch\" \"vite\" --kill-others --success first",
+    "start": "serve -s dist",
     "build": "relay-compiler --validate && tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
